force-app/main/default/objects/CCL_Wizard_Configuration__mdt/CCL_Wizard_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Each record represents an independant Wizard</description>
    <label>Wizard Configuration</label>
    <pluralLabel>Wizard Configurations</pluralLabel>
</CustomObject>