force-app/main/default/objects/CCL_Wizard_Configuration__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <defaultValue>&#39;PRF__c&#39;</defaultValue>
    <label>Object Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>