force-app/main/default/objects/CCL_Wizard_Configuration__mdt/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>Record Type Id</description>
    <inlineHelpText>Record Type Id</inlineHelpText>
    <label>Record Type Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>