force-app/main/default/objects/CCL_Wizard_Configuration__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Wizard</description>
    <inlineHelpText>Title of the Wizard</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>