force-app/main/default/objects/CCL_Wizard_Configuration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Wizard</description>
    <inlineHelpText>Type of Wizard</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRF</fullName>
                <default>true</default>
                <label>PRF</label>
            </value>
            <value>
                <fullName>ADF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>